src/components/Alltime.scss
.alltime {
  display: flex;
}

.card-body {
  margin: 24px;
  background-color: hsl(227, 47%, 96%);
  border-radius: 5px;
  height: 200px;
  width: 200px;
  justify-content: center;
  align-items: center;
  padding: 50px 75px;
  border-top: 5px solid hsl(208, 92%, 53%)
}

.fb-border {
  border-top: 5px solid hsl(208, 92%, 53%);
}

